@@ -79,6 +79,7 @@ public class HTTPSServer extends Server {
         httpHandler.setAfterTheDeadlineMode(config.getAfterTheDeadlineLanguage());
       }
       httpHandler.setLanguageModel(config.getLanguageModelDir());
+      httpHandler.setMaxWorkQueueSize(config.getMaxWorkQueueSize());
       server.createContext("/", httpHandler);
       executorService = getExecutorService(workQueue, config);
       server.setExecutor(executorService);
