@@ -71,6 +71,9 @@ LanguageTool Change Log
 -Embedded server:
     -XML escaping has been fixed, this could cause invalid XML documents
      to be returned
+    -new config file option 'maxWorkQueueSize' that lets you set the maximum
+     size of the request queue - if it gets larger than this, requests will
+     be rejected (503 Service unavailable)
 
 -Rule syntax:
     -A rule may now have a single example sentence as long as it has a 'correction'
